k8s/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mtls-app
  namespace: mtls
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mtls-app
      port: 443
  tls:
    passthrough: true
